--- a/PML_Final_Project.Rmd
+++ b/PML_Final_Project.Rmd
@@ -267,4 +267,10 @@ Final_Predict=predict(mod_rf,testing_data)
 Final_Predict
 ```
 
+Predicted Output:
+```{r eval=TRUE, echo=TRUE}
+##[1] B A B A A E D B A A B C B A E E A B B B
+##Levels: A B C D E
+```
+
 
