--- a/PML_Final_Project.Rmd
+++ b/PML_Final_Project.Rmd
@@ -269,8 +269,8 @@ Final_Predict
 
 Predicted Output:
 ```{r eval=TRUE, echo=TRUE}
-##[1] B A B A A E D B A A B C B A E E A B B B
-##Levels: A B C D E
+<span style="color:black">##[1] B A B A A E D B A A B C B A E E A B B B</span>
+<span style="color:black">##Levels: A B C D E </span> 
 ```
 
 
