--- a/PML_Final_Project.Rmd
+++ b/PML_Final_Project.Rmd
@@ -142,7 +142,7 @@ dim(sub_testing_data)
 
 ####**6.	Model 1: Random Forest model:**
 
-As a first step, a random forest model was built on the sub_training_data with 53 features included. The model was used to predict the sub_testing_data . Accuracy of the model was found to be more than 99%.
+As a first step, a random forest model was built on the sub_training_data with 53 features included. The model was used to predict the sub_testing_data . Accuracy of the model was found to be 99.23%.
 
 ```{r eval=TRUE, echo=TRUE, results='hide'}
 #6.1 Model1: A random forest model
@@ -155,11 +155,14 @@ Accuracy:
 #6.2 Accuracy using RF Model
 confusionMatrix(pred_rf, sub_testing_data$classe)$overall[1]
 ```
-
+```{r eval=TRUE, echo=TRUE}
+##  Accuracy 
+## 0.9923528
+```
 
 ####**7.  Model 2: Gradient Boost model :**
 
-To explore the scope of the improvement from the exhaustive RF model, a gradient boost algorithm was tried and tested on the sub_testing_data. However, the model failed to outperform the RF model, yielding an accuracy of around 96%.
+To explore the scope of the improvement from the exhaustive RF model, a gradient boost algorithm was tried and tested on the sub_testing_data. However, the model failed to outperform the RF model, yielding an accuracy of 96.35%%.
 
 ```{r eval=TRUE, echo=TRUE, results='hide'}
 #7.1 Model2: A boosted trees model (Gradient boosting approach)
@@ -172,7 +175,10 @@ Accuracy:
 #7.2 Accuracy using GB Model: 0.9648228
 confusionMatrix(pred_gbm, sub_testing_data$classe)$overall[1]
 ```
-
+```{r eval=TRUE, echo=TRUE}
+##  Accuracy 
+## 0.9635483
+```
 
 ####**8.  Model 3: Combined Model  through RF :**
 
@@ -190,6 +196,10 @@ Accuracy:
 # 8.2 Accuracy of the combined model is very close to the RF model. Thus proceeding with the RF tree as the chosen model. 
 confusionMatrix(Combined_Prediction, sub_testing_data$classe)$overall[1]
 ```
+```{r eval=TRUE, echo=TRUE}
+##  Accuracy 
+## 0.9923528
+```
 
 
 ####**9.  Choosing the final model:**
@@ -206,6 +216,17 @@ The RF model, while testing on the sub_testing_data yielded very accurate result
 	table(pred_rf,sub_testing_data$classe)
 ```
 
+Confusion matrix:
+
+```{r eval=TRUE, echo=TRUE}
+##        
+## pred_rf    A    B    C    D    E
+##       A 1116    6    0    0    0
+##       B    0  753    2    0    0
+##       C    0    0  682   19    0
+##       D    0    0    0  624    3
+##       E    0    0    0    0  718
+```
 
 ####**11.	Understanding the variable importance:**
 
@@ -250,10 +271,13 @@ Misclassified points:
 #12.3 Identifying the mis-classified data points with respect to the above two features:
 #Misclassified data-points
 qplot(roll_belt,yaw_belt,colour=predRight,data=sub_testing_data,main="Sub-Testing Predictions")
-#Datapoints near the borders being misclassified
 ```
+
 ![alt text](https://raw.githubusercontent.com/gkrishna9790/gkrishna9790.github.io/Machine_Learning_GK/Images/Misclassification.jpeg)
 
+```{r eval=TRUE, echo=TRUE}
+#Datapoints near the borders being misclassified
+```
 Hence, it is the data points near the boundaries of the classes, that have been mis classified. But more than 99% of the data points have been classified accurately.
 
 
@@ -269,8 +293,8 @@ Final_Predict
 
 Predicted Output:
 ```{r eval=TRUE, echo=TRUE}
-<span style="color:black">##[1] B A B A A E D B A A B C B A E E A B B B</span>
-<span style="color:black">##Levels: A B C D E </span> 
+##[1] B A B A A E D B A A B C B A E E A B B B
+##Levels: A B C D E
 ```
 
 
